# Introduction_to_Computer_Science

./: README.md
archlab/: archlab-handin.tar  archlab-handout.tar
archlab/archlab-handout/: Makefile  README  archlab-handin.tar
archlab/archlab-handout/archlab-project/: .gitignore  Cargo.toml  LICENSE  README.md  ncopy_test_failure.ys
archlab/archlab-handout/archlab-project/assets/: hcl-rs.typ  y86-debugger-0.2.0.vsix
archlab/archlab-handout/archlab-project/binutils/: Cargo.toml
archlab/archlab-handout/archlab-project/debugger/: Cargo.toml  README.md
archlab/archlab-handout/archlab-project/debugger/src/: lib.rs  main.rs  server.rs
archlab/archlab-handout/archlab-project/grader/: Cargo.toml
archlab/archlab-handout/archlab-project/grader/src/: lib.rs  main.rs
archlab/archlab-handout/archlab-project/misc/: bubble.ys  (+4 more)
archlab/archlab-handout/archlab-project/sim/: Cargo.toml  README.md
archlab/archlab-handout/archlab-project/sim/src/: dsl.rs  isa.rs  lab.rs  lib.rs  object.rs  utils.rs
archlab/archlab-handout/archlab-project/sim_macro/: Cargo.toml
archlab/archlab-handout/archlab-project/sim_macro/src/: expr.rs  items.rs  lib.rs
bomblab/: bomb210.tar
bomblab/bomb210/: README  bomb  bomb.asm  bomb.c
cachelab/: ubuntu_handin.tar
cachelab/cachelab-handout/: csim  csim-ref  csim.c  test-csim  test-trans  trace.f0  tracegen  trans.c
cachelab/cachelab-handout/traces/: yi.trace
datalab/: bits.c  datalab-handout.tar
malloclab/: mm.c
malloclab/malloclab-handout/: config.h  mdriver  mm-v6.c  mm_v1_inplicit.c  mm_v2_seg.c  mm_v3_seg.c  mm_v4_seg.c  mm_v5_bug.c
proxylab/: proxylab-handout.tar
proxylab/proxylab-handout/: Makefile  README  cache.c  cache.h  proxy.c  webdriver_test.py
proxylab/proxylab-handout/tiny/: tiny  tiny.c
tshlab/: tshlab-handout.tar  tshlab.docx
tshlab/tshlab-handout/: mycat  myenv  myhup  myintp  myints  myspin1  myspin2  mysplit  mysplitp  myterm1  myterm2  myterm3  mytstpp  mytstps  runtrace  sdriver  trace20.txt  trace21.txt  tsh  tsh.c  tshref  tshref.asm
(+14 files in other folders)
