[package]
name = "grader"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binutils = { path = "../binutils" }
tracing.workspace = true
anyhow.workspace = true
rand = { version = "0.8.5", features = ["small_rng"] }
y86-sim = { path = "../sim" }
