[package]
name = "y86-sim"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Y86 assembler and pipeline simulator written in Rust"
authors = ["Weiyao Huang <jy.cat@qq.com>"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
regex = "1.10"
sim_macro = { path = "../sim_macro" }
interpolator = "0.5.0"
binutils = { path = "../binutils" }
tracing.workspace = true
anyhow.workspace = true

serde = { version = "1.0", features = ["derive"], optional = true }
charming = "0.4.0"

[features]
serde = [ "dep:serde" ]


[lib]
crate-type = ["cdylib", "rlib"]
